WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
250718
SVG with currentcolor sometimes doesn't trigger repaint
https://bugs.webkit.org/show_bug.cgi?id=250718
Summary
SVG with currentcolor sometimes doesn't trigger repaint
Matthieu Dubet
Reported
2023-01-17 11:24:50 PST
The SVG color properties (fill/stroke/lightning/..) don't repaint when currentcolor is changed by a parent element
Attachments
Add attachment
proposed patch, testcase, etc.
Matthieu Dubet
Comment 1
2023-01-17 11:25:07 PST
rdar://102904403
Matthieu Dubet
Comment 2
2023-01-17 11:48:05 PST
Pull request:
https://github.com/WebKit/WebKit/pull/8730
EWS
Comment 3
2023-01-19 06:21:55 PST
Committed
259082@main
(f5b520fdec0e): <
https://commits.webkit.org/259082@main
> Reviewed commits have been landed. Closing PR #8730 and removing active labels.
Antoine Quint
Comment 4
2023-02-10 00:46:23 PST
***
Bug 185721
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug