Cherry-pick f5b520fdec0e. rdar://problem/102904403

SVGRenderStyle should repaint on resolved color change
    https://bugs.webkit.org/show_bug.cgi?id=250718
    rdar://102904403

    Reviewed by Antti Koivisto.

    Before this patch, the diff algorithm would naively
    compare the color properties value without taking into
    account the dynamic nature of "currentcolor".

    * LayoutTests/imported/w3c/web-platform-tests/svg/painting/svg-currentcolor-dynamic-inherit-expected.html: Added.
    * LayoutTests/imported/w3c/web-platform-tests/svg/painting/svg-currentcolor-dynamic-inherit.html: Added.
    * Source/WebCore/rendering/style/RenderStyle.cpp:
    (WebCore::RenderStyle::changeRequiresLayout const):
    (WebCore::RenderStyle::changeRequiresRepaint const):
    (WebCore::RenderStyle::diff const):
    * Source/WebCore/rendering/style/SVGRenderStyle.cpp:
    (WebCore::colorChangeRequiresRepaint):
    (WebCore::SVGRenderStyle::changeRequiresLayout const):
    (WebCore::SVGRenderStyle::changeRequiresRepaint const):
    (WebCore::SVGRenderStyle::diff const): Deleted.
    * Source/WebCore/rendering/style/SVGRenderStyle.h:

    Canonical link: https://commits.webkit.org/259082@main

Canonical link: https://commits.webkit.org/258608.57@safari-7615.1.18-branch